[PLG_COURSES_DISCUSSIONS] Fixed issues with error message not going away, new thread creation not carrying section data, long strings overflowing comment content

--- a/plugins/courses/discussions/discussions.css
+++ b/plugins/courses/discussions/discussions.css
@@ -307,6 +307,11 @@
 	}
 
 	/* Comments */
+	ol.comments .comment-body {
+		margin: 0;
+		padding: 0;
+		overflow-x: auto;
+	}
 	ol.comments .start > .comment-content, 
 	ol.comments .author > .comment-content {
 		border-color: #d9d9d9;
